--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<p class="header">D.A.R.K. - Digital Archive for Restricted Knowledge</p>
+<div class="container">
+    <p class="glitch">
+      <span aria-hidden="true">D.A.R.K.</span>
+      <span aria-hidden="true">Digital Archive for Restricted Knowledge</span>
+    </p>
+  </div>
