--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <p class="glitch">
-      <span aria-hidden="true">D.A.R.K.</span>
-      <span aria-hidden="true">Digital Archive for Restricted Knowledge</span>
-    </p>
+  <div class="glitch" data-text="D.A.R.K.">D.A.R.K.</div>
+  <div class="glow">D.A.R.K.</div>
+  <p class="subtitle">Digital Archive for Restricted</p>
   </div>
+  <div class="scanlines"></div>
