--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -1,65 +1,179 @@
-  .container {
-    text-align: center;
+.container {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 10em;
+  left: 50%;
+}
+
+.glitch {
+  color: rgb(223, 191, 191);
+  position: relative;
+  font-size: 9vw;
+  // margin: 70px 200px;
+  animation: glitch 5s 5s infinite;
+}
+
+.glitch::before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: -5px 0 magenta;
+  background: black;
+  overflow: hidden;
+  top: 0;
+  animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5.05s infinite;
+}
+
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -5px 0 lightgreen;
+  background: black;
+  overflow: hidden;
+  top: 0;
+  animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
+}
+
+@keyframes glitch {
+  1% {
+    transform: rotateX(10deg) skewX(90deg);
   }
-  
-  .glitch {
-    font-size: 5rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    position: relative;
-    text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
-      0.025em 0.04em 0 #fffc00;
-    animation: glitch 725ms infinite;
+  2% {
+    transform: rotateX(0deg) skewX(0deg);
   }
-  
-  .glitch span {
-    position: absolute;
-    top: 0;
-    left: 0;
+}
+
+@keyframes noise-1 {
+  0% {
+    clip-path: inset(0px 0 0px 0);
   }
-  
-  .glitch span:first-child {
-    animation: glitch 500ms infinite;
-    clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
-    transform: translate(-0.04em, -0.03em);
-    opacity: 0.75;
+  10% {
+    clip-path: inset(10px 0 5px 0);
   }
-  
-  .glitch span:last-child {
-    animation: glitch 375ms infinite;
-    clip-path: polygon(0 65%, 100% 65%, 100% 100%, 0 100%);
-    transform: translate(0.04em, 0.03em);
-    opacity: 0.75;
+  20% {
+    clip-path: inset(30px 0 20px 0);
   }
-  
-  @keyframes glitch {
-    0% {
-      text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
-        0.025em 0.04em 0 #fffc00;
-    }
-    15% {
-      text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
-        0.025em 0.04em 0 #fffc00;
-    }
-    16% {
-      text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
-        -0.05em -0.05em 0 #fffc00;
-    }
-    49% {
-      text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
-        -0.05em -0.05em 0 #fffc00;
-    }
-    50% {
-      text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
-        0 -0.04em 0 #fffc00;
-    }
-    99% {
-      text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
-        0 -0.04em 0 #fffc00;
-    }
-    100% {
-      text-shadow: -0.05em 0 0 #00fffc, -0.025em -0.04em 0 #fc00ff,
-        -0.04em -0.025em 0 #fffc00;
-    }
+  30% {
+    clip-path: inset(20px 0 15px 0);
   }
-  
+  40% {
+    clip-path: inset(40px 0 30px 0);
+  }
+  50% {
+    clip-path: inset(15px 0 25px 0);
+  }
+  60% {
+    clip-path: inset(35px 0 10px 0);
+  }
+  70% {
+    clip-path: inset(25px 0 30px 0);
+  }
+  80% {
+    clip-path: inset(5px 0 20px 0);
+  }
+  90% {
+    clip-path: inset(10px 0 15px 0);
+  }
+  100% {
+    clip-path: inset(0px 0 0px 0);
+  }
+}
+
+@keyframes noise-2 {
+  0% {
+    clip-path: inset(0px 0 0px 0);
+  }
+  10% {
+    clip-path: inset(15px 0 25px 0);
+  }
+  20% {
+    clip-path: inset(30px 0 10px 0);
+  }
+  30% {
+    clip-path: inset(5px 0 30px 0);
+  }
+  40% {
+    clip-path: inset(20px 0 15px 0);
+  }
+  50% {
+    clip-path: inset(35px 0 20px 0);
+  }
+  60% {
+    clip-path: inset(10px 0 5px 0);
+  }
+  70% {
+    clip-path: inset(30px 0 25px 0);
+  }
+  80% {
+    clip-path: inset(0px 0 10px 0);
+  }
+  90% {
+    clip-path: inset(25px 0 30px 0);
+  }
+  100% {
+    clip-path: inset(0px 0 0px 0);
+  }
+}
+
+.scanlines {
+  overflow: hidden;
+  mix-blend-mode: difference;
+}
+
+.scanlines::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  background: repeating-linear-gradient(
+    to bottom,
+    transparent 0%,
+    rgba(255, 255, 255, 0.05) .5%,
+    transparent 1%
+  );
+
+  animation: fudge 7s ease-in-out alternate infinite;
+}
+
+@keyframes fudge {
+  from {
+    transform: translate(0px, 0px);
+  }
+  to {
+    transform: translate(0px, 2%);
+  }
+}
+
+.glow {
+  @extend .glitch;
+  text-shadow: 0 0 1000px rgb(223, 191, 191);
+  color: transparent;
+  position: absolute;
+  top: 0;
+}
+
+.subtitle {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+  font-size: .8vw;
+  color: rgba(165, 141, 141, .4);
+  text-transform: uppercase;
+  letter-spacing: 1em;
+  text-align: center;
+  position: absolute;
+  left: 17%;
+  animation: glitch-2 5s 5.02s infinite;
+}
+
+@keyframes glitch-2 {
+  1% {
+    transform: rotateX(10deg) skewX(70deg);
+  }
+  2% {
+    transform: rotateX(0deg) skewX(0deg);
+  }
+}
